@@ -128,46 +128,63 @@ Rcpp::RObject npyLoad(const std::string & filename, const std::string & type, co
 
 void npySave(std::string filename, Rcpp::RObject x, std::string mode) { 
     if (::Rf_isMatrix(x)) {
-        if (::Rf_isNumeric(x)) {
+        if (::Rf_isInteger(x)) {
+            Rcpp::IntegerMatrix mat = transpose(Rcpp::IntegerMatrix(x));
+            std::vector<int64_t> vec(mat.ncol()*mat.nrow());
+            std::copy(mat.begin(), mat.end(), vec.begin());
+#ifdef WORDS_BIGENDIAN
+            std::transform(vec.begin(), vec.end(), vec.begin(), swap_endian<int64_t>);
+#endif
+            std::vector<unsigned int> shape = 
+                Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(mat.ncol(), mat.nrow()));
+            if (hasEnding(filename, ".gz")) {
+                cnpy::npy_gzsave<int64_t>(filename, &(vec[0]), &(shape[0]), 2); 	// no mode, overwrite only
+            } else {
+                cnpy::npy_save<int64_t>(filename, &(vec[0]), &(shape[0]), 2, mode);
+            }
+        } else if (::Rf_isNumeric(x)) {
             Rcpp::NumericMatrix mat = transpose(Rcpp::NumericMatrix(x));
+#ifdef WORDS_BIGENDIAN
+            std::transform(mat.begin(), mat.end(), mat.begin(), swap_endian<double>);
+#endif
             std::vector<unsigned int> shape = 
                 Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(mat.ncol(), mat.nrow()));
             
             if (hasEnding(filename, ".gz")) {
-                cnpy::npy_gzsave(filename, mat.begin(), &(shape[0]), 2); 	// no mode, overwrite only
+                cnpy::npy_gzsave<double>(filename, mat.begin(), &(shape[0]), 2); 	// no mode, overwrite only
             } else {
-                cnpy::npy_save(filename, mat.begin(), &(shape[0]), 2, mode);
-            }
-        } else if (::Rf_isInteger(x)) {
-            Rcpp::IntegerMatrix mat = transpose(Rcpp::IntegerMatrix(x));
-            std::vector<unsigned int> shape = 
-                Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(mat.ncol(), mat.nrow()));
-            if (hasEnding(filename, ".gz")) {
-                cnpy::npy_gzsave(filename, mat.begin(), &(shape[0]), 2); 	// no mode, overwrite only
-            } else {
-                cnpy::npy_save(filename, mat.begin(), &(shape[0]), 2, mode);
+                cnpy::npy_save<double>(filename, mat.begin(), &(shape[0]), 2, mode);
             }
         } else {
             Rf_error("Unsupported matrix type\n");
         }
     } else if (::Rf_isVector(x)) {
-        if (::Rf_isNumeric(x)) {
-            Rcpp::NumericVector vec(x);
-            std::vector<unsigned int> shape = 
-                Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(vec.length()));
-            if (hasEnding(filename, ".gz")) {
-                cnpy::npy_gzsave(filename, vec.begin(), &(shape[0]), 1); 	// no mode, append only
-            } else {
-                cnpy::npy_save(filename, vec.begin(), &(shape[0]), 1, mode);
-            }
-        } else if (::Rf_isInteger(x)) {
+        if (::Rf_isInteger(x)) {
             Rcpp::IntegerVector vec(x);
+            std::vector<int64_t> v(vec.size());
+            std::copy(vec.begin(), vec.end(), v.begin());
+#ifdef WORDS_BIGENDIAN
+            std::transform(v.begin(), v.end(), v.begin(), swap_endian<int64_t>);
+#endif
             std::vector<unsigned int> shape = 
                 Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(vec.length()));
             if (hasEnding(filename, ".gz")) {
-                cnpy::npy_gzsave(filename, vec.begin(), &(shape[0]), 1);	// no mode, append only
+                cnpy::npy_gzsave<int64_t>(filename, &(v[0]), &(shape[0]), 1);	// no mode, append only
             } else {
-                cnpy::npy_save(filename, vec.begin(), &(shape[0]), 1, mode);
+                cnpy::npy_save<int64_t>(filename, &(v[0]), &(shape[0]), 1, mode);
+            }
+        } else if (::Rf_isNumeric(x)) {
+            Rcpp::Rcout << "Saving Numeric Vector\n";
+            Rcpp::NumericVector vec(x);
+#ifdef WORDS_BIGENDIAN
+            std::transform(vec.begin(), vec.end(), vec.begin(), swap_endian<double>);
+#endif
+            std::vector<unsigned int> shape = 
+                Rcpp::as<std::vector<unsigned int> >(Rcpp::IntegerVector::create(vec.length()));
+            if (hasEnding(filename, ".gz")) {
+                cnpy::npy_gzsave<double>(filename, vec.begin(), &(shape[0]), 1); 	// no mode, append only
+            } else {
+                cnpy::npy_save<double>(filename, vec.begin(), &(shape[0]), 1, mode);
             }
         } else {
             Rf_error("Unsupported vector type\n");
